fix alignments in prediction tab

--- a/RAPP/static/css/style.css
+++ b/RAPP/static/css/style.css
@@ -146,6 +146,10 @@ main section {
     display: flex;
 }
 
+#prediction-tab .row {
+    margin-bottom: 0;
+}
+
 #data-tab .col, #statistics-tab .col, #prediction-tab .col{
     display: flex;
     flex-direction: column;
